--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,100 +6,153 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/nen_app_dep"
+    android:background="@drawable/nen_main"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_marginLeft="20dp"
+            android:id="@+id/exit"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_action_back"/>
+
+        <ImageButton
+            android:id="@+id/caidat"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="240dp"
+            android:background="@drawable/setting_white" />
+        <ImageButton
+            android:id="@+id/stop"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_action_pause"/>
+
+    </LinearLayout>
     <TextView
-        android:background="@drawable/bg_blue_corner_10"
+        android:id="@+id/maintext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ĐỐ VUI"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        />
+        android:layout_below="@id/logo"
+        android:fontFamily="sans-serif-black"
+        android:shadowColor="@color/black"
+        android:shadowRadius="20"
+        android:text="LET'S QUIZ"
+        android:textAlignment="center"
+        android:textColor="#ffff4d"
+        android:textSize="50sp"
+        android:textStyle="italic" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        >
+        android:layout_marginTop="10dp">
+
         <TextView
-            android:layout_marginTop="20dp"
+            android:id="@+id/tv_content_question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_content_question"
-            android:textSize="20sp"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/cauhoi_corner"
             android:gravity="center"
-            android:textColor="@android:color/white"
             android:paddingStart="10dp"
+            android:paddingTop="40dp"
             android:paddingEnd="10dp"
-            android:background="@drawable/bg_blue_corner_10"
-            android:text="Content question 1"/>
+            android:paddingBottom="40dp"
+            android:text="Câu hỏi"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/tv_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Question 1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:textSize="20sp"
             android:layout_centerHorizontal="true"
+            android:background="@drawable/question_corner"
             android:paddingStart="20dp"
+            android:paddingTop="10dp"
             android:paddingEnd="20dp"
-            android:background="@drawable/bg_orange_corner_30"/>
+            android:paddingBottom="10dp"
+            android:text="Câu hỏi thứ 1"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </RelativeLayout>
     <TextView
         android:id="@+id/tv_answer1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Answer 1"
+        android:text="Câu trả lời 1"
         android:layout_marginTop="30dp"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:gravity="center"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@drawable/bg_blue_corner_30"/>
+        android:background="@drawable/cautraloi_corner"/>
+
     <TextView
         android:id="@+id/tv_answer2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Answer 2"
         android:layout_marginTop="10dp"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:background="@drawable/cautraloi_corner"
         android:gravity="center"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@drawable/bg_blue_corner_30"/>
+        android:text="Câu trả lời 2"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
+
     <TextView
         android:id="@+id/tv_answer3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Answer 3"
+        android:text="Câu trả lời 3"
         android:layout_marginTop="10dp"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:gravity="center"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@drawable/bg_blue_corner_30"/>
+        android:background="@drawable/cautraloi_corner"/>
     <TextView
         android:id="@+id/tv_answer4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Answer 4"
+        android:text="Câu trả lời 4"
         android:layout_marginTop="10dp"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:gravity="center"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@drawable/bg_blue_corner_30"/>
+        android:background="@drawable/cautraloi_corner"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="30dp">
 
+        <ImageButton
+            android:layout_marginHorizontal="100dp"
+            android:id="@+id/prev"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_action_prev"/>
+
+        <ImageButton
+            android:id="@+id/next"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_action_next"/>
+
+    </LinearLayout>
 
 </LinearLayout>
